# Instruction-Introspection

./: Anchor.toml  README.md  package-lock.json  package.json
programs/dice-game/: Cargo.toml
programs/dice-game/src/: error.rs  instructions.rs  lib.rs
programs/dice-game/src/instructions/: commit_entropy.rs  intialize.rs  place_bet.rs  refund_bet.rs  resolve_bet.rs  resolve_from_entropy.rs
programs/dice-game/src/state/: mod.rs
tests/: Cargo.toml
tests/src/: dice-game.ts  test_initialize.rs
