[package]
name = "dice-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dice_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
solana-ed25519-program="3.0.0"
solana-instructions-sysvar="3.0.1"
solana-sdk-ids="3.0.1"
solana-sha256-hasher="3.0.1"

[lints.rust]
unexpected_cfgs = {level="warn", check-cfg = ['cfg(target_os, values("solana"))']}

[lints.clippy]
diverging_sub_expression = "allow"